--- a/index.html
+++ b/index.html
@@ -165,32 +165,14 @@
 
             <nav>
                 <h4>
-                    Open Source Contributions
+                    Projects
                 </h4>
 
                 <ol>
-                   
                     <li>
-                        <a href="https://github.com/orangewise/s3-files/pull/26" target="_blank">s3-files crash</a>
-                    </li>
-                     <li>
-                        <a href="https://github.com/oven-sh/bun/issues/13226" target="_blank">bun sqlite crash</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/kolesparks/react-native-snap-cam" target="_blank">
-                            react native snap cam
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/naoufal/react-native-touch-id/pull/206" target="_blank">
-                            react native touch id crash 1
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://github.com/naoufal/react-native-touch-id/pull/196" target="_blank">
-                            react native touch id crash 2
-                        </a>
+                        <a href="https://wwww.headlinefilter.com" target="_blank">
+                                Headline Filter
+                        </a> 
                     </li>
                 </ol>
             </nav>
@@ -201,7 +183,11 @@
                     Posts ➡️
                 </h4>
                 <ol>
-
+                    <li>
+                        <a href="#headline-filter-release">
+                            Headline Filter Release
+                        </a>
+                    </li>
                     <li>
                         <a href="#prisma-is-the-repository-layer">Prisma is the Repository Layer</a>
                     </li>
@@ -273,6 +259,50 @@
                     </li>
                 </ol>
             </nav>
+
+             <nav>
+                <h4>
+                    Open Source Contributions
+                </h4>
+
+                <ol>
+                   
+                    <li>
+                        <a href="https://github.com/orangewise/s3-files/pull/26" target="_blank">s3-files crash</a>
+                    </li>
+                     <li>
+                        <a href="https://github.com/oven-sh/bun/issues/13226" target="_blank">bun sqlite crash</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/kolesparks/react-native-snap-cam" target="_blank">
+                            react native snap cam
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/naoufal/react-native-touch-id/pull/206" target="_blank">
+                            react native touch id crash 1
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://github.com/naoufal/react-native-touch-id/pull/196" target="_blank">
+                            react native touch id crash 2
+                        </a>
+                    </li>
+                </ol>
+            </nav>
+
+
+            <article id="headline-filter-release">
+                <h2>Headline Filter Release</h2>
+                <p>Posted Jan 24th, 2026</p>
+                <p>
+                    My latest project <a href="https://www.headlinefilter.com" target="_blank">Headline Filter</a> sifts through news headlines to find the ones you ask for. 
+                    You see only what you want to see. No algorithm. No ads. No trackers. No unsolicited content to distract you. Simple and free.
+                    Coded by hand using Bun, vanilla html/css/js. Uses gemma 3n 4b model for super fast and efficient inference. Scrapingfish for ethical and simple scraping + novel technique to scrape and decode links in one request.
+                    Open source on <a href="https://github.com/kolesparks/headlinefilter" target="_blank"> GitHub</a> under the <a href="https://world.hey.com/dhh/the-o-saasy-license-336c5c8f" target="_blank">O Saasy License</a> and hosted on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>.
+                </p>
+            </article>
 
             <article id="prisma-is-the-repository-layer">
                 <h2>Prisma is the Repository Layer</h2>
