article: headline filter release edits

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <p>
                     My latest project <a href="https://www.headlinefilter.com" target="_blank">Headline Filter</a> sifts through news headlines to find the ones you ask for. 
                     You see only what you want to see. No algorithm. No ads. No trackers. No unsolicited content to distract you. Simple and free.
-                    Coded by hand using Bun, vanilla html/css/js. Uses gemma 3n 4b model for super fast and efficient inference. Scrapingfish for ethical and simple scraping + novel technique to scrape and decode links in one request.
+                    Coded by hand using Bun, vanilla html/css/js. Http streaming for real-time results. Gemma 3n 4b model for super fast and efficient inference. <a href="https://scrapingfish.com/" target="_blank">Scrapingfish</a> for ethical and simple scraping + novel technique to scrape and decode links in one request.
                     Open source on <a href="https://github.com/kolesparks/headlinefilter" target="_blank"> GitHub</a> under the <a href="https://world.hey.com/dhh/the-o-saasy-license-336c5c8f" target="_blank">O Saasy License</a> and hosted on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>.
                 </p>
             </article>
