edit: swarm coding does not work proofing

--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                     All that beings said, I am skeptical. My hunch is that agentic coding does not scale in a meaningful way and will never scale assuming the foundation model architectures remain relatively static.
                     <ol>
                         <li>
-                          Cursor's projects (Excel, Browser, etc.) are all building against existing specifications of software that already exists. 
+                          Cursor's projects (Excel, Browser, etc.) are all building against full specifications of software that already exists. 
                     Having a crystal clear battle-tested specification of what to build is massive advantage and one that virtually does not exist in the real software market. 
-                    Yes, there is a market for rebuilding existing software, but the rebuild has to be different in some fundamental way in order to be valuable, and that difference in design makes things much harder that simply cloning the original.
+                    Yes, there is a market for rebuilding existing software, but the rebuild has to be different in some fundamental way in order to be valuable, and that makes things much harder than simply cloning the original. Lastly, these projects use a significant number of third-party libraries - some of which are non-trivial to replace - so the software is not even close to 'from-scratch'.
                         </li>
                         <li>
                            None of the research projects have reached production-grade status. This is more important than many think. How do we know it's possible? How do we know the total cost/time? We cannot determine the real-world production-grade time and resource costs by extrapolation. Getting software to production-grade (100% done) is generally disproportionately more expensive than getting it to 20%, 40%, 70%, 90%. 
