edit: model trained on source code

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <ol>
                         <li>
                           Cursor's projects (Excel, Browser, etc.) are all building against full specifications of software that already exists. 
-                    Having a crystal clear battle-tested specification of what to build is massive advantage and one that virtually does not exist in the real software market. 
+                    Having a crystal clear battle-tested specification of what to build is massive advantage and one that virtually does not exist in the real software market. Not to mention, the foundational models are trained on existing code, some of which is the source code of the things that Cursor is rebuilding.
                     Yes, there is a market for rebuilding existing software, but the rebuild has to be different in some fundamental way in order to be valuable, and that makes things much harder than simply cloning the original. Lastly, these projects use a significant number of third-party libraries - some of which are non-trivial to replace - so the software is not even close to 'from-scratch'.
                         </li>
                         <li>
