--- a/index.html
+++ b/index.html
@@ -170,9 +170,14 @@
 
                 <ol>
                     <li>
-                        <a href="https://wwww.headlinefilter.com" target="_blank">
-                                Headline Filter
+                        <a href="https://wwww.headlinefilter.com" target="_blank" rel="noopener">
+                            Headline Filter
                         </a> 
+                    </li>
+                    <li>
+                        <a href="https://github.com/kolesparks/kolecreates.github.io" target="_blank" rel="noopener">
+                            kolesparks.com
+                        </a>
                     </li>
                 </ol>
             </nav>
