article: beverage wall release

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
                         </a> 
                     </li>
                     <li>
+                        <a href="https://wwww.beveragewall.com" target="_blank" rel="noopener">
+                            Beverage Wall
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://github.com/kolesparks/kolecreates.github.io" target="_blank" rel="noopener">
                             kolesparks.com
                         </a>
@@ -188,6 +193,11 @@
                     Posts ➡️
                 </h4>
                 <ol>
+                    <li>
+                        <a href="#beverage-wall-release">
+                            Beverage Wall Release
+                        </a>
+                    </li>
                     <li>
                         <a href="#swarm-coding-does-not-work">
                             Swarm Coding Does Not Work
@@ -269,6 +279,21 @@
                     </li>
                 </ol>
             </nav>
+
+
+            <article id="beverage-wall-release">
+                <h2>Beverage Wall Release</h2>
+                <p>Posted Feb 8th, 2026</p>
+
+                <p>
+                    This last week I released another small site <a href="https://wwww.beveragewall.com" target="_blank" rel="noopener">Beverage Wall</a>. 
+                    The site is just pictures of beverages uploaded by random people. You can post your own for free without a login.
+                    It is written in vanilla html/css/js on the frontend, Bun+Sqlite on the backend. Uses a small model from openrouter to ensure only beverage images are uploaded.
+                    imagemagick is used to process uploaded images. Images are streamed down with the html as embedded bas64 urls for the fastest time-to-first-beverage. 
+                    Images are compressed client-side before upload to reduce upload time.
+                    Open Source on<a href="https://github.com/kolesparks/beveragewall" target="_blank" rel="noopener">Github</a>. Hosted on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>.
+                </p>
+            </article>
 
 
             <article id="swarm-coding-does-not-work">
