--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 
                 <ol>
                     <li>
-                        <a href="https://wwww.headlinefilter.com" target="_blank" rel="noopener">
+                        <a href="https://www.headlinefilter.com" target="_blank" rel="noopener">
                             Headline Filter
                         </a> 
                     </li>
                     <li>
-                        <a href="https://wwww.beveragewall.com" target="_blank" rel="noopener">
+                        <a href="https://www.beveragewall.com" target="_blank" rel="noopener">
                             Beverage Wall
                         </a>
                     </li>
@@ -286,7 +286,7 @@
                 <p>Posted Feb 8th, 2026</p>
 
                 <p>
-                    This last week I released another small site <a href="https://wwww.beveragewall.com" target="_blank" rel="noopener">Beverage Wall</a>. 
+                    This last week I released another small site <a href="https://www.beveragewall.com" target="_blank" rel="noopener">Beverage Wall</a>. 
                     The site is just pictures of beverages uploaded by random people. You can post your own for free without a login.
                     It is written in vanilla html/css/js on the frontend, Bun+Sqlite on the backend. Uses a small model from openrouter to ensure only beverage images are uploaded.
                     imagemagick is used to process uploaded images. Images are streamed down with the html as embedded bas64 urls for the fastest time-to-first-beverage. 
