--- a/resume.html
+++ b/resume.html
@@ -2,8 +2,8 @@
 <p>kole.sparks@hey.com</p>
 <h2>Skills</h2>
 <ul>
-<li><strong>Frontend</strong>: React, Vite, Nextjs, Capacitor, React Native</li>
-<li><strong>Backend/DevOps</strong>: Nodejs, Bun, AWS, CDK, CI/CD, Docker, Postgres</li>
+<li><strong>Frontend</strong>: React, Nextjs, Capacitor, React Native</li>
+<li><strong>Backend</strong>: Nodejs, AWS, CDK, Docker, Postgres</li>
 <li><strong>Languages</strong>: Typescript, SQL</li>
 <li><strong>General</strong>: System Design, Product/UX Design, Team Lead, Automated Testing, Linux/MacOS</li>
 </ul>
@@ -13,12 +13,12 @@
 <h4>Home Care Agency Management System</h4>
 <ul>
 <li>Lead the product, design, architecture, and development of an Agency Management System for one of the largest in-home care companies in the US.</li>
-<li>I built scheduling, digital forms / signatures, secure chat, billing, payroll, maps, dashboards, incident reporting, caregiver mobile app, IVR check-in system, ADP employee data sync, and Medicaid EVV Aggregator integrations across 8 different US states.</li>
+<li>Built scheduling, digital forms / signatures, secure chat, billing, payroll, maps, dashboards, incident reporting, caregiver mobile app, IVR check-in system, ADP employee data sync, and Medicaid EVV Aggregator integrations across 8 different US states.</li>
 <li>The system serves critical business workflows for thousands of employees on AWS (Cognito, RDS, S3, SNS, ECS, Connect), Postgres, Nodejs, React, Capacitor.</li>
 </ul>
 <h4>Media Company Digital Asset Management System</h4>
 <ul>
-<li>Built a visual asset matrix UI designed to organize and arrange images intended for stitched composite creation, enabling intuitive management of massive visual datasets.</li>
+<li>Built a visual asset matrix UI to organize and arrange images for stitched composite creation, enabling intuitive management of massive visual datasets.</li>
 <li>Developed a high-performance media processing service capable of ingesting and converting diverse and industrial file formats (e.g., RAW, TIFF, sub-codecs).</li>
 <li>Executed a multi-hundred-terabyte cloud migration from on-premise storage to AWS S3 using Snowball, optimizing long-term costs with Intelligent Tiering and automated Deep Archive backups.</li>
 <li>Migrated legacy metadata from Excel spreadsheets into structured, queryable PostgreSQL on RDS, and implemented search and classification infrastructure.</li>
@@ -54,4 +54,4 @@
 <h2>Education</h2>
 <p>B.S. Computer Science
 2018
-Keen State College</p>
+Keene State College</p>
