--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <section>
                 <h2>About Me</h2>
                 <p>
-                    7 years fullstack dev. Ex-Amazon SDE2. Lead engineer on an ERP system for an <a href="https://villagecaregiving.com" target="_blank">in-home care company</a>. Solo building with Bun, sqlite, vanilla html/css/js - running on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>. 
+                    7 years fullstack dev. Ex-Amazon SDE2. Lead engineer on an Agency Management System for one of the largest in-home care companies in the US. Solo building with Bun, sqlite, vanilla html/css/js - running on <a href="https://railway.com?referralCode=ABSfL6" target="_blank">Railway</a>. 
                 </p>
                 <p>
                     My work is dedicated to Anna, Owen, Moose, Bunga, fam, and all those who came before me.
