add site to resume

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <h1>Kole Sparks</h1>
-<p>kole.sparks@hey.com</p>
+<p>kole.sparks@hey.com | kolesparks.com</p>
 <h2>Skills</h2>
 <ul>
 <li><strong>Frontend</strong>: React, Nextjs, Capacitor, React Native</li>
