--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
 <li><strong>Frontend</strong>: React, Nextjs, Capacitor, React Native</li>
 <li><strong>Backend</strong>: Nodejs, AWS, CDK, Docker, Postgres</li>
 <li><strong>Languages</strong>: Typescript, SQL</li>
+<li><strong>AI</strong>: OpenRouter, AWS Bedrock, Google Vertex, Fine-Tuning, MCP, Claude Code, Cursor</li>
 <li><strong>General</strong>: System Design, Product/UX Design, Team Lead, Automated Testing, Linux/MacOS</li>
 </ul>
 <h2>Work Experience</h2>
