article: test matter more

--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
                 </h4>
                 <ol>
                     <li>
+                        <a href="#tests-matter-more">
+                            Tests Matter More
+                        </a>
+                    </li>
+                    <li>
                         <a href="#beverage-wall-release">
                             Beverage Wall Release
                         </a>
@@ -279,7 +284,12 @@
                     </li>
                 </ol>
             </nav>
+<article id="tests-matter-more">
+                <h2>Tests Matter More</h2>
+                <p>Posted Feb 24th, 2026</p>
 
+                <p>Automated software tests are more important than the implementation code of any substantial software system. This was true, is true now, more than ever in the age of LLM-coding, and will continue to be true. The problem is two fold. 1. the industry is addicted to short term reward 2. standard practices for testing are immature at best. LLM-coding has only fed the addiction without building better practices. Ironically, good tests happen to be the answer to nearly all the shortcomings of LLM-coding. to be continued....</p>
+            </article>
 
             <article id="beverage-wall-release">
                 <h2>Beverage Wall Release</h2>
