resume: gemini-powered document analyzer

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 <h4>Home Care Agency Management System</h4>
 <ul>
 <li>Lead the product, design, architecture, and development of an Agency Management System for one of the largest in-home care companies in the US.</li>
-<li>Built scheduling, digital forms / signatures, secure chat, billing, payroll, maps, dashboards, incident reporting, caregiver mobile app, IVR check-in system, ADP employee data sync, and Medicaid EVV Aggregator integrations across 8 different US states.</li>
+<li>Built scheduling, digital forms / signatures, Gemini-powered document analyzer, secure chat, billing, payroll, maps, dashboards, incident reporting, caregiver mobile app, IVR check-in system, ADP employee data sync, and Medicaid EVV Aggregator integrations across 8 different US states.</li>
 <li>The system serves critical business workflows for thousands of employees on AWS (Cognito, RDS, S3, SNS, ECS, Connect), Postgres, Nodejs, React, Capacitor.</li>
 </ul>
 <h4>Media Company Digital Asset Management System</h4>
