article: test update

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 </h4>
                 <ol>
                     <li>
-                        <a href="#tests-matter-more">
-                            Tests Matter More
+                        <a href="#tests-are-more-valuable">
+                            Tests are More Valuable
                         </a>
                     </li>
                     <li>
@@ -284,11 +284,25 @@
                     </li>
                 </ol>
             </nav>
-<article id="tests-matter-more">
-                <h2>Tests Matter More</h2>
+            <article id="tests-are-more-valuable">
+                <h2>Tests Are More Valuable</h2>
                 <p>Posted Feb 24th, 2026</p>
 
-                <p>Automated software tests are more important than the implementation code of any substantial software system. This was true, is true now, more than ever in the age of LLM-coding, and will continue to be true. The problem is two fold. 1. the industry is addicted to short term reward 2. standard practices for testing are immature at best. LLM-coding has only fed the addiction without building better practices. Ironically, good tests happen to be the answer to nearly all the shortcomings of LLM-coding. to be continued....</p>
+                <p>Automated software tests are more valuable than the implementation code of any substantial software system.</p>
+                <p>
+                    This was true, is still true, more than ever, and will be true. 
+                    The SQLite implementation is FOSS but the test suite, regarded as one of the best in the industry, costs money.
+                    Recent Cursor and Anthropic research demonstrated the value of tests/specifications by using them to develop complex implementations completely automously.
+                    I have a working theory that the success of any complex enterprise software systems is largely thanks to cost-effective offshore QA labor.
+                    Refactoring and iteration is such central part of the software development lifecycle that we have a derogatory term for software that is hard/impossible to change: Legacy.
+                    Good tests allow you to freely change software with limited to no risk. Good tests prevent your software from becoming legacy software.
+                    So why is so much software untested? Why so many legacy systems?
+                    The problem is two fold:
+                    1. the software industry and business world is addicted to short term reward 
+                    2. standard practices for testing are immature at best. 
+                    LLM-coding has only fed the addiction without building better practices. 
+                    Ironically, I think good tests are the solution to most of the problems with LLM-coding.
+                </p>
             </article>
 
             <article id="beverage-wall-release">
