article: tests are more valuable proofing and notes

--- a/index.html
+++ b/index.html
@@ -293,15 +293,19 @@
                     This was true, is still true, more than ever, and will be true. 
                     The SQLite implementation is FOSS but the test suite, regarded as one of the best in the industry, costs money.
                     Recent Cursor and Anthropic research demonstrated the value of tests/specifications by using them to develop complex implementations completely automously.
-                    I have a working theory that the success of any complex enterprise software systems is largely thanks to cost-effective offshore QA labor.
-                    Refactoring and iteration is such central part of the software development lifecycle that we have a derogatory term for software that is hard/impossible to change: Legacy.
+                    I suspect that the success of many complex enterprise software systems was largely propped up on low-cost offshore QA labor.
+                    Refactoring and iteration is such a central part of the software development lifecycle that we have a derogatory term for software that is hard/impossible to change: Legacy.
                     Good tests allow you to freely change software with limited to no risk. Good tests prevent your software from becoming legacy software.
                     So why is so much software untested? Why so many legacy systems?
                     The problem is two fold:
                     1. the software industry and business world is addicted to short term reward 
                     2. standard practices for testing are immature at best. 
-                    LLM-coding has only fed the addiction without building better practices. 
-                    Ironically, I think good tests are the solution to most of the problems with LLM-coding.
+                    Further notes:
+                    Now, LLM-coding feeds the addiction without building better practices. 
+                    Ironically, good tests are the solution to most of the problems with LLM-coding. Key word: good. 
+                    Much of the complaints about tests are complaints about bad tests. 
+                    Tests must meet several criteria to be considered good: 1. implementation agnostic - changed only when system behavior is changed 2. provide a high degree of confidence.
+                    To be continued...
                 </p>
             </article>
 
